<resources>
    <string name="app_name">Vinyetes</string>
    <string name="boto_cistella">Afegir a\nla cistella</string>
    <string name="novetats">Novetats</string>
    <string name="lookbacksinopsi">La Fujino creu fermament en el seu talent, mentre que la Kyômoto s\'està tancada a casa com una hikikomori. La inquietud i les ganes de crear manga és el nexe d\'unió d\'aquestes dues noies que viuen en una ciutat de províncies. Passen els dies i els mesos, i el suport ha estat constant...</string>
    <string name="chainsawman5sinopsi">L\'Aki es troba cara a cara amb el dimoni que controlava la Himeno. Què li deu passar pel cap, a aquest paio consumit per la set de venjança...?\! D\'altra banda, en Denji es torna a enfrontar a en Samurai Sword\! La motoserra contra la katana: quin serà el desenllaç d\'aquest combat tan sanguinari?\! La pugna pel cor d\'en Denji es precipita cap a un final d\'allò més inesperat\!</string>
    <string name="jujutsukaisen4sinopsi">Durant la investigació d\'un assassinat executat amb poder maleït, l\'Itadori coneix en Junpei, l\'únic testimoni del cas, i de seguida sembla que s\'avenen. Tanmateix, en Junpei es troba sota la influència de les paraules d\'en Mahito, l\'esperit maligne que ha comès els homicidis. El pla d\'en Mahito consisteix a enfrontar en Junpei i l\'Itadori, i sembla que en Junpei ja ha caigut a la trampa...</string>
    <string name="onepiece1sinopsi">És la gran era dels pirates. Centenars de bergants lluiten, banderes onejant al vent, per a aconseguir el One Piece, el tresor que ho aplega tot que va deixar el llegendari rei dels pirates Gold Roger. Aquest pirata famós té tota l\'admiració d\'un noi anomenat Ruffy, que es mor de ganes de salpar amb en Shanks, el líder d\'una banda pirata que amarra el vaixell al seu poble. Un bon dia, en Ruffy es menja una fruita del diable, un botí de guerra que en Shanks i els seus havien aconseguit, i li atorga un cos que s\'estira com si fos de goma a canvi de perdre la capacitat de nedar de per vida.</string>
    <string name="haikyu1sinopsi">Puc saltar\!\! Al Shôyô Hinata el fascina el voleibol. Malgrat això, al seu primer i últim partit oficial de l\'escola mitjana, pateix una severa derrota a mans de la jove promesa Tobio Kageyama, a qui han batejat com el “rei de la pista”. Així doncs, el Hinata jura venjar-se\'n i truca a la porta de l\'escola superior Karasuno per a aconseguir-ho\!</string>
    <string name="guardians3sinopsi">Amb l\'ajuda de la Tamayo i en Yushirô, en Tanjirô i la Nezuko s\'enfronten a un parell de dimonis que fan servir pilotes i signes de fletxa com a arma, i que a més diuen ser membres de les 12 Llunes Demoníaques o, el que és el mateix, subordinats directes d\'en Kibutsuji. Seran capaços de vence\'ls? Trobaran alguna pista que els guiï fins al seu arxienemic…?</string>
    <string name="evangelion1sinopsi">Torna Neon Genesis Evangelion, un dels mangues de culte més populars, però aquesta vegada ho fa en una fantàstica edició col·leccionista en català que els fans de la sèrie no podran deixar escapar. Aquesta revolucionària saga que va marcar un abans i un després en el seu gènere barreja ciència-ficció amb una disseccionada anàlisi de l\'ànima humana que no deixa indiferent els lectors…</string>
    <string name="ranma1sinopsi">En Genma i en Ranma Saotome, pare i fill, practiquen un art marcial anomenada kenpo. Un incident mentre s\'entrenaven a la Xina els ha atorgat la particular habilitat de transformar-se al contacte amb l\'aigua freda: en Genma en un panda i el seu fill Ranma, en noia. Això sí, en tocar aigua calenta, tots dos tornen als seus respectius estats originals. De nou al Japó, els Saotome s\'instal·len al dojo Tendô, de l\'estil musabetsu kakutô. Es decideix que Ranma i la filla menor dels Tendô, l\'Akane, siguin promesos, però ells no hi estan del tot d\'acord.</string>
    <string name="sinopsidetail">Sinopsi</string>
    <string name="eandetail">EAN</string>
    <string name="publicaciodetail">Publicació</string>
    <string name="editorialdetail">Editorial</string>
    <string name="relacionat">Relacionat</string>
</resources>