<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragmentscrolldetail"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/cardstyle"
            >

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/nomcomicdetail"
                    style="@style/textnormal"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/autordetail"
                    style="@style/textnormal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/imagecomicdetail"
                        style="@style/imatgelist"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingTop="0dp"
                        android:paddingLeft="7dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            style="@style/cardstyle"
                            android:layout_width="wrap_content">
                            <TextView
                                android:id="@+id/demografiacomicdetail"
                                android:background="@color/grey"
                                android:padding="5dp"
                                style="@style/textnormal"/>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/generescomicdetail"
                            style="@style/textnormal"
                            android:paddingLeft="8dp"/>

                        <TextView
                            style="@style/subtitol"
                            android:text="@string/sinopsidetail"
                            android:paddingLeft="8dp"
                            />

                        <TextView
                            android:id="@+id/sinopsiscomicdetail"
                            style="@style/textnormal"
                            android:maxLength="163"
                            android:paddingLeft="8dp"
                            android:paddingTop="5dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/preucomicdetail"
                        style="@style/textnormal"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:textSize="25dp"/>
                    <TextView
                        style="@style/textnormal"
                        android:text="€"
                        android:layout_marginTop="10dp"
                        android:textSize="25dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>


                </LinearLayout>
                <Button
                    style="@style/botosimple"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:text="AFEGIR A\nLA CISTELLA"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/subtitol"
            android:text="Fitxa tècnica"/>

        <TextView
            style="@style/rallagris"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/textfitxa"
                    android:text="@string/editorialdetail"/>
                <TextView
                    style="@style/textfitxa"
                    android:text="@string/eandetail"/>
                <TextView
                    style="@style/textfitxa"
                    android:text="@string/publicaciodetail"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/editorialdetail"
                    style="@style/textfitxa"/>
                <TextView
                    android:id="@+id/eandetail"
                    style="@style/textfitxa"/>
                <TextView
                    android:id="@+id/publicaciodetail"
                    style="@style/textfitxa"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            style="@style/rallagris"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <TextView
                style="@style/textnormal"
                android:text="@string/relacionat"
                android:layout_marginTop="20dp"
                android:textSize="25dp"
                android:textStyle="bold"/>

            <TextView
                style="@style/rallagris"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginHorizontal="4dp"
                android:id="@+id/listRelacionat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/rallagris"
                android:layout_marginTop="4dp"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>